Fix body content not hidden under footer

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -103,6 +103,6 @@ section.filters div.popover ul li {
 
 /*Fix body content not hidden under footer*/
 .places {
-    margin-bottom: 480px; 
-    padding-bottom: 480px;
+    margin-bottom: 850px; 
+    padding-bottom: 850px;
 }
